tests/negative/neg_pr1110c_set_constant.safe
-- Test: neg_pr1110c_set_constant
-- Description: `set(m, key, value)` requires a writable map target.
-- Clause: SAFE@468cf72:docs/PR11.x-series-proposed.md#pr1110c-built-in-map-of-k-v
-- Expected: REJECT

package neg_pr1110c_set_constant

   values : constant map of (integer, integer)

   set (values, 1, 2)
